Bug 126356 - Tiny visual artifact when opening autofilter menu
Summary: Tiny visual artifact when opening autofilter menu
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: All All
: low trivial
Assignee: Justin L
URL:
Whiteboard: target:7.4.0 target:7.3.0.0.beta2
Keywords: bibisected, bisected, regression
: 140898 144759 (view as bug list)
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2019-07-12 01:03 UTC by Aron Budea
Modified: 2022-04-19 03:58 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (33.74 KB, image/png)
2019-07-12 01:04 UTC, Aron Budea
Details
Zoomed screenshot (5.0.0.5) (63.15 KB, image/png)
2021-03-08 23:22 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2019-07-12 01:03:47 UTC
- Open a spreadsheet with autofilter, eg. attachment 152043 [details] from bug 125791.
- Move the cell selection further away from the autofilter dropdown so its redraw doesn't interfere.
- Click on autofilter dropdown.

=> There's a tiny dot in A1 (in the sample above the "f", see screenshot).
In the sample the dropdown is in A1 as well, but if it's in a different cell, the dot still appears in A1.

Observed using LO 6.4.0.0.alpha0+ (3889e2f2a1f5f87e972e67900b5ff5ef1289479d) & 5.0.0.5 / Windows 7 (both with GL and default rendering).
No dot in 4.4.0.3.
=> regression

Bibisected to the following commit using repo bibisect-win32-5.1. Adding Cc: to Jan Holesovsky.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=342d84218c17da40d0a4f96bc3b07b536d64517a
author		Jan Holesovsky <kendy@collabora.com>	2015-06-10 15:01:15 +0200
committer	Jan Holesovsky <kendy@collabora.com>	2015-06-10 15:50:44 +0200

sc tiled editing: Mapping has to be turned off after drawing the buttons.
Comment 1 Aron Budea 2019-07-12 01:04:18 UTC
Created attachment 152734 [details]
Screenshot
Comment 2 Jacques Guilleron 2019-07-12 21:08:40 UTC
Hi all,

reproduced with
LO 5.0.0.1 Build ID: 9a0b23dd0ab9652e0965484934309f2d49a7758e
Locale : fr-FR (fr_FR)
and uper versions
on Windows 7 home
but not with
LO 5.0.0.0.beta3 Build ID: 96345c15d8ab19c49014f055fe41ba8e1f421e5c
Locale : fr-FR (fr_FR)

Jacques
Comment 3 Aron Budea 2021-03-08 22:37:26 UTC
*** Bug 140898 has been marked as a duplicate of this bug. ***
Comment 4 Aron Budea 2021-03-08 23:22:47 UTC
Created attachment 170353 [details]
Zoomed screenshot (5.0.0.5)

Comparing a screenshot from 5.0.0.5 to Roman's screenshot, attachment 170351 [details] from bug 140898, perhaps the dot got larger recently.
Comment 5 Aron Budea 2021-03-08 23:55:03 UTC
The size change noticed by Roman in bug 140898 came with the following commit:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=008c2354075e1b5b63000f6a2da802971a2902e6
author		Szymon Kłos <szymon.klos@collabora.com>	2021-02-01 16:48:28 +0100
committer	Szymon Kłos <szymon.klos@collabora.com>	2021-03-04 15:42:21 +0100

autofilter: scale dropdown button according to zoom level
Comment 6 Aron Budea 2021-11-03 13:53:27 UTC
*** Bug 144759 has been marked as a duplicate of this bug. ***
Comment 7 Justin L 2021-11-26 12:08:45 UTC
Proposed partial revert at http://gerrit.libreoffice.org/c/core/+/125879
Comment 8 Commit Notification 2021-11-26 17:13:54 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bed6b7356e4bba1604ee5f760c80acc16ae54bae

tdf#126356 partial Revert "sc tiled editing: Mapping has to be

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2021-11-29 09:00:28 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/5d331f3c92623fe6cba089bf2c49e8b518d225dd

tdf#126356 partial Revert "sc tiled editing: Mapping has to be

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Jan Holesovsky 2021-11-30 10:03:32 UTC
Justin: Thank you for fixing it! :-)