tdf#126356 partial Revert "sc tiled editing: Mapping has to be

turned off after drawing the buttons."

This partially reverts LO 5.0
commit 342d84218c17da40d0a4f96bc3b07b536d64517a which comments:
   Also - we are actually never call with something else than MAP_PIXEL,
   so let's kill the resetting of the mapmode;
   let's see if some obscure corner case bites us here.

Several bug reports have indicated artifacts on screen,
all coming from the use of autofilter,
and in these cases the map mode is 0 (Map100thMM),
so I restored the whimsically removed logic.

Change-Id: I9bb5d7418fc4083ed71139a64329b11fa1e4cc13
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125879
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit bed6b7356e4bba1604ee5f760c80acc16ae54bae)