sc/source/ui/cctrl/dpcontrol.cxx
@@ -89,6 +89,11 @@ void ScDPFieldButton::setPopupLeft(bool b)
 
 void ScDPFieldButton::draw()
 {
+    bool bOldMapEnabled = mpOutDev->IsMapModeEnabled();
+
+    if (mpOutDev->GetMapMode().GetMapUnit() != MapUnit::MapPixel)
+        mpOutDev->EnableMapMode(false);
+
     if (mbBaseButton)
     {
         // Background
@@ -135,6 +140,8 @@ void ScDPFieldButton::draw()
 
     if (mbPopupButton)
         drawPopupButton();
+
+    mpOutDev->EnableMapMode(bOldMapEnabled);
 }
 
 void ScDPFieldButton::getPopupBoundingBox(Point& rPos, Size& rSize) const
